--- a/plugin.xml
+++ b/plugin.xml
@@ -90,8 +90,8 @@
     <!-- <framework src="OrderPlaceSdk" type="podspec" spec="~> 0.1.3" /> -->
 
     <!-- 本地庫 -->
-    <resource-file src="src/ios/HockeySDK.embeddedframework/HockeySDKResources.bundle" />
-    <framework src="src/ios/HockeySDK.embeddedframework/HockeySDK.framework" custom="true" />
+    <resource-file src="src/ios/test.embeddedframework/HockeySDKResources.bundle" />
+    <framework src="src/ios/test.embeddedframework/HockeySDK.framework" custom="true" />
 
   </platform>
 
