--- a/plugin.xml
+++ b/plugin.xml
@@ -68,21 +68,19 @@
     <source-file src="src/ios/CPTemplate.m" />
 
     <!-- 系統庫 -->
-	  <!-- <framework src="libstdc++.dylib" />
-    <framework src="libc++.dylib" />
+    <!-- alipay depen -->
+    <framework src="libc++.tbd" />
     <framework src="libz.tbd" />
-    <framework src="AssetsLibrary.framework" />
-    <framework src="CoreText.framework" />
-    <framework src="CoreTelephony.framework" />
-    <framework src="CoreGraphics.framework" />
-    <framework src="Foundation.framework" />
-    <framework src="MobileCoreServices.framework" />
-    <framework src="Photos.framework" />
-    <framework src="QuartzCore.framework" />
-    <framework src="QuickLook.framework" />
-    <framework src="Security.framework" /> -->
     <framework src="SystemConfiguration.framework" />
+    <framework src="CoreTelephony.framework" />
+    <framework src="QuartzCore.framework" />
+    <framework src="CoreText.framework" />
+    <framework src="CoreGraphics.framework" />
     <framework src="UIKit.framework" />
+    <framework src="Foundation.framework" />
+    <framework src="CFNetwork.framework" />
+    <framework src="CoreMotion.framework" />
+    
 
   <!-- pod framework -->
     <!-- <pod id="Flurry-iOS-SDK/FlurrySDK"/> -->
