--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "description": "Cordova Plugin custom",
     "license": "Apache 2.0",
     "author": {
-        "name": "Raphael Hirtenfelder",
+        "name": "jason.chan",
         "email": "peijue.chen@aigens.cn"
     },
     "repository": {
